--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,17 @@
     padding: 0;
 }
 
+.container {
+    width: 1200px;
+}
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+img {
+    max-width: 100%;
+}
 
 .flex {
     display: flex;
@@ -28,4 +34,11 @@ li {
 a {
     text-decoration: none;
     color: currentColor;
+}
+
+button {
+    border: none;
+    background-color: transparent;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1rem;
 }
