--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,15 @@ img {
 }
 
 
+.btn-white {
+    background-color: white;
+    border: 1px solid grey;
+    padding: 10px 20px;
+    text-align: center;
+
+
+}
+
 
 
 .col-1-3 {
@@ -228,7 +237,7 @@ h4 {
     margin-bottom: 30px;
 }
 
-.card div:first-child {
+.card>div:first-child {
     border-bottom: 1px solid grey;
     justify-content: center;
     align-items: center;
@@ -241,7 +250,7 @@ h4 {
 
 
 .card-body {
-    padding: 40px 25px;
+    padding: 30px 25px;
 }
 
 .card-body * {
@@ -297,4 +306,43 @@ h4:nth-child(odd) {
 
 .card-body p:nth-child(3) {
     color: grey;
+}
+
+/*big card*/
+
+.card-big {
+    display: flex;
+    justify-content: space-between;
+    align-items: ;
+}
+
+
+.card-big button {
+    width: 30%;
+    padding-top: 0;
+
+}
+
+.card-big~p {
+    width: 66%;
+}
+
+
+/* partnership */
+
+
+
+.partner {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.partner-txt {
+    width: 30%;
+    padding-top: 50px;
+}
+
+.partner-txt>* {
+    padding: 20px 0;
 }
