--- a/css/style.css
+++ b/css/style.css
@@ -385,19 +385,22 @@ h4:nth-child(odd) {
 
 }
 
-.col-1 {
+.col-1,
+.col-3 {
     display: flex;
     flex-wrap: wrap;
 }
 
-.col-1>* {
+.col-1>*,
+.col-3>* {
     width: calc(100% / 2);
     text-align: center;
-
     padding: 80px;
+    display: flex;
 }
 
-.col-1 img {
+.col-1 img,
+.col-3 img {
     filter: invert(1);
 
 
@@ -417,6 +420,10 @@ h4:nth-child(odd) {
     background-color: #0093ce;
 }
 
+.box3 img {
+    max-height: 35%;
+    margin-top: 40px;
+}
 
 .box4 {
     background-color: red;
@@ -430,8 +437,6 @@ h4:nth-child(odd) {
 }
 
 
-
-
 .col-2>* {
     padding-bottom: 50px;
 }
@@ -439,4 +444,20 @@ h4:nth-child(odd) {
 .col-2 div {
     width: 20%;
     border-top: 2px solid #d3d3d6;
+}
+
+.box5 {
+    background-color: #d5001f;
+}
+
+.box6 {
+    background-color: #b4d0e7;
+}
+
+.box7 {
+    background-color: #0d2481;
+}
+
+.box8 {
+    background-color: #ffd830;
 }
