--- a/css/style.css
+++ b/css/style.css
@@ -529,8 +529,6 @@ h4 {
 }
 
 
-
-
 /* footer */
 
 .col-1-5 {
@@ -543,11 +541,36 @@ footer {
     padding: 100px 0;
 }
 
+.footer-options {
+    display: flex;
+    padding-bottom: 100px;
+
+}
+
 footer h3 {
     padding-bottom: 30px;
+    word-spacing: 0.08em;
+    letter-spacing: 0.03em;
 }
 
 footer li {
     padding: 10px 0;
     color: #b0b0b0;
+}
+
+.lang {
+    display: flex;
+    justify-content: space-between;
+    color: #6d6c6c;
+}
+
+.lang2 {
+    padding: 45px 0;
+    align-items: baseline;
+    border-top: 1px solid #b0b0b0;
+}
+
+.lang p,
+.lang i {
+    padding-right: 10px;
 }
